slight tweaks to front page

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 	<meta property="og:title" content="Murder, She Bet">
 	
 	<meta itemprop="description"
-		content="A game about putting your (play) money where you'd usually put your mouth">
+		content="A game about putting your money where you'd usually put your mouth">
 	<meta name="description"
-		content="A game about putting your (play) money where you'd usually put your mouth" />
+		content="A game about putting your money where you'd usually put your mouth" />
 	<meta name="twitter:description"
-		content="A game about putting your (play) money where you'd usually put your mouth" />
+		content="A game about putting your money where you'd usually put your mouth" />
 	<meta property="og:description"
-		content="A game about putting your (play) money where you'd usually put your mouth" />
+		content="A game about putting your money where you'd usually put your mouth" />
 	
 	<meta property="og:image" content="https://murdershebet.com/screenshot.jpg" />
 	<meta name="twitter:image" content="https://murdershebet.com/screenshot.jpg" />
@@ -104,44 +104,43 @@
 	
 	<br></br>
 
-	<center><h3>A game about educated guesses<br>
-and putting your (play) money where you'd usually only put your mouth</h3></center>
+	<center><h3>A game about educated guesses,<br>
+and putting your money where you'd usually only put your mouth</h3></center>
 
 	<br></br>
 	
 	<center>
-		<h3>The rules:</h3>
+		<h3>Rules:</h3>
 	</center>
 	<ol>
 		<li>Players will watch a Murder Mystery, with multiple <em>suspects</em> that may be <em>guilty</em></li>
-		<li>Suspect characters will be added to the board as they appear</li>
-		<li>Players may buy and sell <em>bets</em> on the suspects until the credits roll</li>
-		<li>When the credits roll, if a suspect is guilty their bets turn into money</li>
-		<li>The players aim is to have as much money as possible at the end</li>
+		<li>Suspicious characters will be added to the board, using your camera, as they appear</li>
+		<li>Players may buy and sell <em>bets</em> on the suspects as the show goes on</li>
+		<li>When the credits roll, if a suspect is guilty, their bets turn into money</li>
+		<li>Try to have as much money as possible at the end!</li>
 	</ol>
 	
 	<br></br>
 	
 	<center>
-		<h3>The controls:</h3>
+		<h3>Controls:</h3>
 	</center>
-	
 	<center>
 		<iframe width="100%" height="51.1%" src="https://www.youtube.com/embed/wlERXS77fr0" frameborder="0"
-		allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-		allowfullscreen="false"></iframe>
+			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+			allowfullscreen="false"></iframe>
 	</center>
 			
 	<center>
-		<h3>For practice: The World's Shortest Murder Mystery!</h3>
+		<h3>Practice: <em>The World's Shortest Murder Mystery!</em></h3>
 	</center>
-	
-	<center><iframe width="100%" height="51.1%" src="https://www.youtube.com/embed/z-VuX2kcaCY" frameborder="0"
+	<center>
+		<iframe width="100%" height="51.1%" src="https://www.youtube.com/embed/z-VuX2kcaCY" frameborder="0"
 			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 			allowfullscreen="false"></iframe></center>
 	
 	<center>
-		<h3>Rule clarifications and FAQ (optional!)</h3>
+		<h3>Rule Clarifications and FAQ</h3>
 	</center>
 	<center>
 		<iframe width="100%" height="51.1%" src="https://www.youtube.com/embed/8IHBtfEX8iU" frameborder="0"
