--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
 <!--
+	
+	For sure you want a "just give your probabilities" controller
+	This can also let you purchase half-bets
+	And can make sure your probabilities add to one
+
+	You might also want what is probably a hedge fund
+	Eg you know that ONE of the "anti sexism policies" will lead to better mental health
+	But you don't know which, so you want your bets spread in a way that gives that
+
+
+
+	vibrate the white flash
+
 	Streamer mode
 		No ID
 		Only the original player can take pictures
@@ -123,7 +136,7 @@
 	<br></br>
 	
 	<center>
-		<h3>How to play, using a <a href='https://www.youtube.com/watch?v=z-VuX2kcaCY'>practice murder mystery video</a>:</h3>
+		<h3>How to play, using a suggested <a href='https://www.youtube.com/watch?v=z-VuX2kcaCY'>practice murder mystery video</a>:</h3>
 	</center>
 	<center>
 		<iframe width="100%" height="51.1%" src="https://www.youtube.com/embed/wlERXS77fr0" frameborder="0"
@@ -218,13 +231,18 @@
 					})
 					connectionLostBox.visible = false
 
-					socket.onclose = () => {
-						connectionLostBox.visible = true
-						if(reloadAttempted === false) {
-							location.reload()
-							reloadAttempted = true
-						}
-					}
+					// socket.onclose = () => {
+					// 	connectionLostBox.visible = true
+					// 	if(reloadAttempted === false) {
+					// 		location.reload()
+					// 		reloadAttempted = true
+					// 	}
+					// 	//could check, from the server, if this is being called
+					// }
+
+					//could zoom with camera?
+
+					//It keeps going to the
 
 					let timeSinceLastPongReception = 0.
 					socket.on("pongAA",()=>{
@@ -251,8 +269,6 @@
 				}
 
 				socket.emit("ready for suspect portraits")
-
-				//it seems to go haywire when the connection is lost
 
 				function loop() {
 					let clockDelta = clock.getDelta()
